[tool.poetry]
name = "enhanced-test-gen"
version = "0.1.0"
description = "Enhanced test generator with coverage analysis"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^1.0.0"
jinja2 = "^3.0.0"
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
coverage = "^7.0.0"
colorama = "^0.4.6"

[tool.poetry.scripts]
enhanced-test-gen = "enhanced_test_gen.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"